--- a/index.html
+++ b/index.html
@@ -123,6 +123,31 @@
         </div>
     </section>
 
+    <section id="certificates">
+    <div class="container">
+        <h2>Certificates</h2>
+        <div class="certificate-list">
+            <div class="certificate">
+                <img src="C:\Users\Gouri Shanker Reddy\Downloads\certificate_isro.jpg" alt="Certificate" class="certificate-image">
+                <div class="certificate-info">
+                    <h3>Geodata Processing using Python</h3>
+                    <p>Issued by: Indian Institute of Remote Sensing (IIRS)</p>
+                    <p>Date: January 15, 2024 - January 19, 2024</p>
+                    <button class="view-certificate">View Certificate</button>
+                </div>
+            </div>
+            <!-- Add more certificates as needed -->
+        </div>
+    </div>
+</section>
+
+<div id="certificate-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <img id="modal-certificate-image" src="" alt="Full Certificate">
+    </div>
+</div>
+
     <section id="contact">
         <div class="container">
             <h2>Get in Touch</h2>
