--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <h2>Certificates</h2>
         <div class="certificate-list">
             <div class="certificate">
-                <img src="C:\Users\Gouri Shanker Reddy\Downloads\certificate_isro.jpg" alt="Certificate" class="certificate-image">
+                <img src="images/certificate_isro.jpg" alt="Certificate" class="certificate-image">
                 <div class="certificate-info">
                     <h3>Geodata Processing using Python</h3>
                     <p>Issued by: Indian Institute of Remote Sensing (IIRS)</p>
