--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <a href="https://www.linkedin.com/in/gouri-shanker-reddy-656072259" target="_blank" class="social-link">
                     <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
                 </a>
-                <a href="https://www.instagram.com/shanker.12.04/" target="_blank" class="social-link">
+                <a href="https://www.instagram.com/shanker.12.04?igsh=dXl0ejhxYmludXI2" target="_blank" class="social-link">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a5/Instagram_icon.png/2048px-Instagram_icon.png" alt="Instagram">
                 </a>
             </div>
