--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <button class="view-certificate">View Certificate</button>
                     </div>
                 </div>
-                <!-- Add more certificates as needed -->
+                
             </div>
         </div>
     </section>
@@ -110,7 +110,7 @@
             <h2>Get in Touch</h2>
             <p>Let's connect and discuss how we can work together under the starry sky.</p>
             <div class="social-links">
-                <a href="https://www.linkedin.com/in/gouri-shanker-reddy-656072259" target="_blank" class="social-link">
+                <a href="www.linkedin.com/in/shanker0412" target="_blank" class="social-link">
                     <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn">
                 </a>
                 <a href="https://www.instagram.com/shanker.12.04/" target="_blank" class="social-link">
