--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Gouri Shanker Reddy</h1>
             <h2>Freelancer / Student - AIML</h2>
             <p>+91 90635 20372 | Hyderabad, Telangana | gourishanker989@gmail.com</p>
-            <a href="https://shanker-0412.github.io/resume/GouriShankerReddyResume.pdf" target="_blank" class="btn">View Resume</a>
+            <a href="/resume/GouriShankerReddyResume.pdf" target="_blank" class="btn">View Resume</a>
         </div>
     </section>
 
