--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <h3>Achievements</h3>
                     <ul>
                         <li>2nd place, University-level Coding Marathon 2023</li>
-                        <li>Ranked 194 in Amazon ML hackathon of total participation list 1,50,000 2024</li>
+                        <li>Ranked 194 in Amazon ML hackathon of total participation list 1,50,000+ 2024</li>
                         <li>Ranked in the top 10% on LeetCode (200+ problems solved)</li>
                     </ul>
                 </div>
